--- a/StockAnalysis/UserInfo/SetMoneyPasswordViewController.xib
+++ b/StockAnalysis/UserInfo/SetMoneyPasswordViewController.xib
@@ -93,9 +93,9 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0bi-Kr-IN2">
-                            <rect key="frame" x="112" y="19" width="205" height="17"/>
+                            <rect key="frame" x="112" y="19" width="165" height="17"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="205" id="zTh-Ig-Tls"/>
+                                <constraint firstAttribute="width" constant="165" id="zTh-Ig-Tls"/>
                             </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -108,6 +108,16 @@
                                 <constraint firstAttribute="height" constant="1" id="gNr-6d-tdZ"/>
                             </constraints>
                         </view>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PFA-sx-GJF">
+                            <rect key="frame" x="285" y="15" width="90" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="发送验证码">
+                                <color key="titleColor" red="0.95294117649999999" green="0.72941176470000002" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="clickMailVerify:" destination="-1" eventType="touchUpInside" id="nn0-FZ-ziG"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
@@ -135,20 +145,22 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fZa-jT-9MU">
-                            <rect key="frame" x="112" y="19" width="205" height="17"/>
+                            <rect key="frame" x="112" y="19" width="170" height="17"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="205" id="J0a-Tp-juS"/>
+                                <constraint firstAttribute="width" constant="170" id="J0a-Tp-juS"/>
                             </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z4g-uW-L0n">
-                            <rect key="frame" x="325" y="12.5" width="50" height="30"/>
+                            <rect key="frame" x="285" y="12.5" width="90" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="50" id="O7L-KW-J4g"/>
+                                <constraint firstAttribute="width" constant="90" id="O7L-KW-J4g"/>
                             </constraints>
-                            <state key="normal" title="60s"/>
+                            <state key="normal" title="发送验证码">
+                                <color key="titleColor" red="0.95294117647058818" green="0.72941176470588232" blue="0.1803921568627451" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                            </state>
                             <connections>
                                 <action selector="clickVerify:" destination="-1" eventType="touchUpInside" id="jSn-WK-dbV"/>
                             </connections>
@@ -225,7 +237,7 @@
                 <constraint firstItem="IjK-4A-Nd0" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="231" id="qMc-WV-oqz"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
-            <point key="canvasLocation" x="32.5" y="102.5"/>
+            <point key="canvasLocation" x="31.199999999999999" y="102.09895052473765"/>
         </view>
     </objects>
     <resources>
